happi-maintenance-web/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: happi-web-svc
  namespace: happimaintenance
spec:
  selector:
    app: happi-web
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
